--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
         <h1 class="titulo">Faça sua escolha</h1>
         <nav class="botoes">
             <a href="lado-claro.html" class="botao-claro">Light side</a>
-            <a href="lado-sombrio.html"class="botao-dark">Dark side</a>
+            <a href="lado-sombrio.html" class="botao-dark">Dark side</a>
         </nav>
+        <a href="saiba-mais.html" class="voltar">Saiba Mais</a>
     </main>
     <script src="app.js"></script>
 </body>
